<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogAsCustomerActivitySignInWithPassword">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/vibrant_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:popupTheme="@style/Theme.AppCompat"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/textViewLogAsCustomerSignInWithPasswordTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/log_as_customer_sign_in_with_password_title"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/logAsCustomerPasswordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/log_as_customer_sign_in_with_password_input_layout_hint"
        android:textColorHint="@color/vibrant_pinkish_red"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:hintTextColor="@color/vibrant_pinkish_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogAsCustomerSignInWithPasswordTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/logAsCustomerPasswordEditeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoText="true"
            android:background="@color/light_gray"
            android:hint="@string/log_as_customer_sign_in_with_password_input_layout_hint"
            android:inputType="text|textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logAsCustomerForgotPasswordButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-condensed"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/log_as_customer_sign_in_with_password_forgot_button"
        android:textColor="@color/get_start_gradiant_end_color"
        app:icon="@drawable/ic_forgot_password"
        app:iconTint="@color/vibrant_pinkish_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logAsCustomerPasswordInputLayout"
        app:strokeWidth="0dp" />

    <Button
        android:id="@+id/logAsCustomerSignInWithPasswordSignInButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:drawableRight="@drawable/ic_sign_in"
        android:drawableTint="@color/vibrant_red"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/log_as_customer_sign_in_with_password_sign_in_button"
        android:textColor="@color/vibrant_red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/vibrant_red" />

</androidx.constraintlayout.widget.ConstraintLayout>