<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewBandBookedScheduleItemCustomerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text=""
                android:textColor="@color/vibrant_red"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/imageViewBandBookedScheduleItemViewLocationButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewBandBookedScheduleItemCustomerEmailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/band_my_schedule_item_customer_email"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewBandBookedScheduleItemCustomerName" />

            <TextView
                android:id="@+id/textViewBandBookedScheduleItemCustomerEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text=""
                android:textAlignment="textEnd"
                android:textColor="@color/vibrant_red"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewBandBookedScheduleItemCustomerEmailTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewBandBookedScheduleItemCustomerName" />

            <ImageView
                android:id="@+id/imageViewBandBookedScheduleItemViewLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_location"
                app:tint="@color/vibrant_red" />

            <TextView
                android:id="@+id/textViewBandBookedScheduleItemCustomerMobileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/band_my_schedule_item_customer_mobile"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewBandBookedScheduleItemCustomerEmailTitle" />

            <TextView
                android:id="@+id/textViewBandBookedScheduleItemCustomerMobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text=""
                android:textAlignment="textEnd"
                android:textColor="@color/vibrant_red"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewBandBookedScheduleItemCustomerMobileTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewBandBookedScheduleItemCustomerEmail" />

            <TextView
                android:id="@+id/textViewBandBookedScheduleItemEventStartDateTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/band_my_schedule_item_event_start_date_time"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewBandBookedScheduleItemCustomerMobileTitle" />

            <TextView
                android:id="@+id/textViewBandBookedScheduleItemEventStartDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text=""
                android:textAlignment="textEnd"
                android:textColor="@color/vibrant_red"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewBandBookedScheduleItemEventStartDateTimeTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewBandBookedScheduleItemCustomerMobile" />

            <TextView
                android:id="@+id/textViewBandBookedScheduleItemEventEndDateTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/band_my_schedule_item_event_end_date_time"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewBandBookedScheduleItemEventStartDateTimeTitle" />

            <TextView
                android:id="@+id/textViewBandBookedScheduleItemEventEndDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text=""
                android:textAlignment="textEnd"
                android:textColor="@color/vibrant_red"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewBandBookedScheduleItemEventEndDateTimeTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewBandBookedScheduleItemEventStartDateTime" />

            <TextView
                android:id="@+id/textViewBandBookedScheduleItemCallNowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:drawableRight="@drawable/ic_call"
                android:drawablePadding="5dp"
                android:text="@string/band_my_schedule_item_call_now_button"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableTint="@color/vibrant_red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewBandBookedScheduleItemMessageNowButton"
                app:layout_constraintTop_toBottomOf="@+id/textViewBandBookedScheduleItemPaymentStatus" />

            <TextView
                android:id="@+id/textViewBandBookedScheduleItemMessageNowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:drawableLeft="@drawable/ic_menu_messages"
                android:drawablePadding="5dp"
                android:drawableTint="@color/vibrant_red"
                android:text="@string/band_my_schedule_item_message_now_button"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewBandBookedScheduleItemCallNowButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewBandBookedScheduleItemPaymentStatusTitle" />

            <TextView
                android:id="@+id/textViewBandBookedScheduleItemPaymentStatusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/band_my_schedule_item_payment_status"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewBandBookedScheduleItemEventEndDateTimeTitle" />

            <TextView
                android:id="@+id/textViewBandBookedScheduleItemPaymentStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="textEnd"
                android:textColor="@color/vibrant_red"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewBandBookedScheduleItemPaymentStatusTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewBandBookedScheduleItemEventEndDateTimeTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>